# hello_cmake

./: CMakeLists.txt  backup_hello_cmake.cu  hello_cmake.cu
